--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -116,6 +116,8 @@
 <!ENTITY Ctr_altoptionsw	"Abrir página de opciones (about:preferences) en una ventana">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
+<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
+<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
 <!ENTITY Ctr_emptyfavicon2	"Reemplazar favicon genérico (vacío y punteado) con uno de hoja en blanco">
 <!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de la antigua barra de estado">
 <!ENTITY Ctr_mstatusbars4e	"El panel de barra de estado está controlado por 'Status-4-Evar'">
