--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -116,6 +116,8 @@
 <!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
 <!ENTITY Ctr_svgfilters		"Araç çubuğu düğmeleri için SVG renkleri kullan">
 <!ENTITY Ctr_wincontrols	"Hareketli tam ekran penceresi kontrolleri">
+<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
+<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
 <!ENTITY Ctr_emptyfavicon2	"Genel(boş noktalı) faviconu kağıt görünümlü favicon ile değiştir">
 <!ENTITY Ctr_mstatusbar		"Hareketli durum çubuğu paneli">
 <!ENTITY Ctr_mstatusbars4e	"Durum çubuğu paneli 'Status-4-Evar' tarafından kontrol edilir">
