--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -116,8 +116,8 @@
 <!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань (about:preferences) у новому вікні">
 <!ENTITY Ctr_svgfilters		"SVG кольори для типових іконок кнопок панелі інструментів">
 <!ENTITY Ctr_wincontrols	"Рухоме управління повноекранним режимом">
-<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
-<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
+<!ENTITY Ctr_oldtoplevimg	"Зображення «домену верхнього рівня»: класичний вигляд">
+<!ENTITY Ctr_altalertbox	"«Вікно попереджень»: альтернативний вигляд">
 <!ENTITY Ctr_emptyfavicon2	"Замінити загальний значок сайту (порожній і пунктирний)">
 <!ENTITY Ctr_mstatusbar		"Рухомий рядок стану">
 <!ENTITY Ctr_mstatusbars4e	"Панель статусу контролюється додатком «Status-4-Evar»">
@@ -128,8 +128,8 @@
 <!ENTITY Ctr_stoprel1		"Важливо: з’являється кнопка «Перезавантаження» на місці кнопки «Зупинити»!">
 <!ENTITY Ctr_panelmenucol	"Панель меню: альтернативний колір тла">
 <!ENTITY Ctr_hideprivmask	"Приватний огляд: приховати індикатор маски">
-<!ENTITY Ctr_navsmallicons	"Small icons">
-<!ENTITY Ctr_navlargeicons	"Large icons">
+<!ENTITY Ctr_navsmallicons	"Малі іконки">
+<!ENTITY Ctr_navlargeicons	"Великі іконки">
 <!ENTITY Ctr_nbisizedelay	"мс затримка виконання (1000 мс = 1 сек)">
 <!ENTITY Ctr_findbar		"Панель пошуку">
 <!ENTITY Ctr_findbar_def	"Типова позиція">
@@ -145,7 +145,7 @@
 <!ENTITY Ctr_cpanelmenus	"Панель меню: компактний вигляд (закладки, історія тощо)">
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
 <!ENTITY Ctr_alt_newtabp	"Сторінка нової вкладки (about:newtab): альтернативний вигляд">
-<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
+<!ENTITY Ctr_ctroldsearch	"Старий пошук (експериментальний)">
 <!ENTITY Ctr_addonmanager	"Менеджер додатків">
 <!ENTITY Ctr_alt_addonsp	"Сторінка «Детальніше» в Додатках: альтернативний вигляд">
 <!ENTITY Ctr_alt_addonsm	"Менеджер додатків: альтернативний вигляд">
@@ -280,7 +280,7 @@
 <!ENTITY Ctr_pananimation	"Анімація відкривання панелі">
 <!ENTITY Ctr_tabanimation	"Анімація відкривання/закривання вкладок (about:config preference)">
 <!ENTITY Ctr_dlanimation	"Анімація «Повідомлення завантаження» (about:config preference)">
-<!ENTITY Ctr_fsanimation	"Повноекранні анамації (about:config preference)">
+<!ENTITY Ctr_fsanimation	"Повноекранні анімації (about:config preference)">
 <!ENTITY Ctr_fsaduration	"Повноекранні анімації для HTML5 вмісту (about:config preferences)">
 
 <!ENTITY Ctr_toolsitem		"Пункт в меню інструментів">
