--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -208,7 +208,8 @@
 <!ENTITY Ctr_urlbardropm	"Přesunout rozevírací šipku na konec řádku">
 <!ENTITY Ctr_hideprbutton	"Nezobrazovat upozornění při blokování vyskakovacích oken">
 <!ENTITY Ctr_urlbar_ib		"Tlačítko identity webu (identity box)">
-<!ENTITY Ctr_verifiedcolors	"Zelený/modrý identity-box pro ověřené stránky">
+<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Favicona">
 <!ENTITY Ctr_padlock		"Zámek">
 <!ENTITY Ctr_padlock_hid	"skrytý">
