--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -208,7 +208,8 @@
 <!ENTITY Ctr_urlbardropm	"Flyt rullemenu-pilen til slutningen af adresselinjerne">
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en popup blokeres">
 <!ENTITY Ctr_urlbar_ib		"Knappen Identitet for websted (Identitet boks)">
-<!ENTITY Ctr_verifiedcolors	"Grøn/blå farver på knap til bekræftede websteder og sikre forbindelser">
+<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Favicon: aktuelt webstedsikon">
 <!ENTITY Ctr_padlock		"Hængelås ikon til sikre forbindelser">
 <!ENTITY Ctr_padlock_hid	"skjul">
