--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -208,7 +208,8 @@
 <!ENTITY Ctr_urlbardropm	"Verschiebe die 'Schaltfläche' ans Ende der Adressleiste">
 <!ENTITY Ctr_hideprbutton	"Verstecke 'Infosymbol' (wenn ein Popup-Fenster blockiert wurde)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
-<!ENTITY Ctr_verifiedcolors	"Grüne bzw. blaue Farbe bei sicheren Verbindungen und verifizierten Webseiten">
+<!ENTITY Ctr_ib_nohovcolor	"Gray Farbe beim 'Hovern' nicht anzeigen">
+<!ENTITY Ctr_verifiedcolors	"Farbig bei verifizierten Webseiten, sicheren und unsicheren Verbindungen">
 <!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) der Webseite">
 <!ENTITY Ctr_padlock		"Schloss-Symbol bei sicheren Verbindungen">
 <!ENTITY Ctr_padlock_hid	"versteckt">
