--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -208,7 +208,8 @@
 <!ENTITY Ctr_urlbardropm	"Teisalda rippmenüü avamise nupp aadressiriba lõppu">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
-<!ENTITY Ctr_verifiedcolors	"Rohelised/sinised nupud verifitseeritud veebisaitide ja turvaliste ühenduste jaoks">
+<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Lehe ikoon: aktiivse veebisaidi ikoon">
 <!ENTITY Ctr_padlock		"Tabaluku ikoon turvaliste ühenduste jaoks">
 <!ENTITY Ctr_padlock_hid	"peidetud">
