--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -208,7 +208,8 @@
 <!ENTITY Ctr_urlbardropm	"Placer le dropmarker à la fin de la barre d'adresse">
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification quand un pop-up est bloqué">
 <!ENTITY Ctr_urlbar_ib		"Bouton d'identité">
-<!ENTITY Ctr_verifiedcolors	"Couleurs alternatives pour les sites web vérifiés">
+<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Afficher le favicon dans la barre d'adresse">
 <!ENTITY Ctr_padlock		"Cadenas">
 <!ENTITY Ctr_padlock_hid	"masqué">
