--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -208,7 +208,8 @@
 <!ENTITY Ctr_urlbardropm	"移動下拉式三角按鈕到網址列末端">
 <!ENTITY Ctr_hideprbutton	"當彈出型廣告視窗被封鎖時，不顯示通知圖示">
 <!ENTITY Ctr_urlbar_ib		"網站識別鈕 (身份區塊)">
-<!ENTITY Ctr_verifiedcolors	"已驗證的網站識別鈕顯示為綠色/藍色">
+<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"網址列顯示網站圖示">
 <!ENTITY Ctr_padlock		"鎖頭">
 <!ENTITY Ctr_padlock_hid	"隱藏">
