--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -208,7 +208,8 @@
 <!ENTITY Ctr_urlbardropm	"下拉控件移动到地址栏尾部">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
-<!ENTITY Ctr_verifiedcolors	"使用绿色/蓝色的身份标识框来显示被验证的网站和加密连接">
+<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"网站图标：当前网站图标">
 <!ENTITY Ctr_padlock		"加密连接锁图标">
 <!ENTITY Ctr_padlock_hid	"隐藏">
