--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -206,9 +206,10 @@
 <!ENTITY Ctr_hideurlgo		"Entferne 'Los'">
 <!ENTITY Ctr_hideurlsrg		"Entferne 'Neu laden, Stopp &amp; Los' Trennlinien &amp; Leerstellen">
 <!ENTITY Ctr_urlbardropm	"Verschiebe die 'Schaltfläche' ans Ende der Adressleiste">
+<!ENTITY Ctr_altreaderico	"Alternative Symbole für die 'Lese-Modus'-Schaltfläche">
 <!ENTITY Ctr_hideprbutton	"Verstecke 'Infosymbol' (wenn ein Popup-Fenster blockiert wurde)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
-<!ENTITY Ctr_ib_nohovcolor	"Gray Farbe beim 'Hovern' nicht anzeigen">
+<!ENTITY Ctr_ib_nohovcolor	"Graue Farbe beim 'Hovern' nicht anzeigen">
 <!ENTITY Ctr_verifiedcolors	"Farbig bei verifizierten Webseiten, sicheren und unsicheren Verbindungen">
 <!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) der Webseite">
 <!ENTITY Ctr_padlock		"Schloss-Symbol bei sicheren Verbindungen">
