--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -206,6 +206,7 @@
 <!ENTITY Ctr_hideurlgo		"Tłocašk 'Start' schowaś">
 <!ENTITY Ctr_hideurlsrg		"Źěleńske smužki a prozne znamjenja za tłocaški 'Znowego, stoj a Start' schowaś">
 <!ENTITY Ctr_urlbardropm	"Tłocašk na kóńc adresowego póla pśesunuś">
+<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
