--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -206,6 +206,7 @@
 <!ENTITY Ctr_hideurlgo		"Ocultar botón 'Ir'">
 <!ENTITY Ctr_hideurlsrg		"Ocultar separadores y espacios del botón 'Recargar, Parar e Ir'">
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue al final de la barra de URL">
+<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (recuadro de identidad)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
