--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -206,6 +206,7 @@
 <!ENTITY Ctr_hideurlgo		"Peida 'mine' nupp">
 <!ENTITY Ctr_hideurlsrg		"Peida nuppude 'laadi uuesti, peata &amp; mine' eraldajad &amp; vahed">
 <!ENTITY Ctr_urlbardropm	"Teisalda rippmenüü avamise nupp aadressiriba lõppu">
+<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
