--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -206,6 +206,7 @@
 <!ENTITY Ctr_hideurlgo		"Nascondi il pulsante 'Vai'">
 <!ENTITY Ctr_hideurlsrg		"Nascondi spazio e separatori dai pulsanti Stop, Ricarica e Vai">
 <!ENTITY Ctr_urlbardropm	"Sposta il pulsante Avanti/Indietro all’estremità della barra degli indirizzi">
+<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"Nascondi l’icona di notifica quando un popup viene bloccato">
 <!ENTITY Ctr_urlbar_ib		"Pulsante delle connessioni sicure (riquadro di verifica)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
