--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -206,6 +206,7 @@
 <!ENTITY Ctr_hideurlgo		"Masquer le bouton 'aller à'">
 <!ENTITY Ctr_hideurlsrg		"Cacher les séparateurs de boutons 'actualiser, stop &amp; aller à' &amp; espaces">
 <!ENTITY Ctr_urlbardropm	"Placer le dropmarker à la fin de la barre d'adresse">
+<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification quand un pop-up est bloqué">
 <!ENTITY Ctr_urlbar_ib		"Bouton d'identité">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
