--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -206,6 +206,7 @@
 <!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"İşaretçiyi konum çubuğunun sonuna taşı">
+<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"Popup engellendiğinde beliren uyarıyı gizle">
 <!ENTITY Ctr_urlbar_ib		"Site Kimlik Düğmesi (kimlik kutusu)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
