--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -206,6 +206,7 @@
 <!ENTITY Ctr_hideurlgo		"隐藏 “转到” 按钮">
 <!ENTITY Ctr_hideurlsrg		"隐藏 “重新载入，停止和转到” 按钮的分隔符与空白">
 <!ENTITY Ctr_urlbardropm	"下拉控件移动到地址栏尾部">
+<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
